@@ -71,6 +71,7 @@
     "core-js": "^2.0.0",
     "d3": "^4.3.0",
     "formous": "^0.8.8",
+    "jquery": "^3.1.1",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
