@@ -21,8 +21,6 @@ import helpers from './../../../../helpers/index';
 let exposed = new class {
 
 	processCurrenciesAndRates(input, callback) {
-		//console.log(input);
-		//console.log(callback);
 
 		// Draw up some arrays for present day
 			let currentCurrencyList = [];
@@ -78,12 +76,6 @@ let exposed = new class {
 			});
 
 			// Edit the array for the graph for the selected currencies
-
-			//let historicCurrencyListSelected = historicCurrencyListAll.slice(0);
-			/*historicCurrencyListAll.forEach((item, index) => {
-				historicCurrencyListSelected.push(item);
-			});*/
-
 			historicCurrencyListSelected = helpers.generate.copyOfArray(historicCurrencyListAll);
 
 			historicCurrencyListSelected.forEach((item, index) => {
